# inclinometer

./: .gitmodules  Dockerfile  README.md
.github/workflows/: catkin_build.yml
inclinometer/: CMakeLists.txt  install_requirements.sh  package.xml  python3_requirements.txt
inclinometer/config/: inclinometer.rviz  inclinometer_params.yaml
inclinometer/launch/inclinometer/: inclinometer_model.launch  inclinometer_test.launch  rviz.launch  test_inclinometer.launch  yelldozer_model.launch  yelldozer_rviz.launch  yelldozer_test.launch
inclinometer/launch/uavcan/: uavcan_communicator.launch
inclinometer/scripts/: IMU_pos_computer.py  requirements.txt  run.sh  run_inclinometer.sh  uav_to_ros_converter.py
inclinometer/src/: tf_broadcaster.cpp  tf_broadcaster_new.cpp
inclinometer/urdf/: inclinometer.urdf.xacro  yelldozer.urdf.xacro
inclinometer/worlds/: empty.world
scripts/: docker.sh  realsense_aruco_install.sh
yellDozer/: CMakeLists.txt  install_requirements.sh  package.xml  python3_requirements.txt
yellDozer/config/: yelldozer.rviz
yellDozer/launch/yellDozer/: yelldozer_model.launch  yelldozer_rviz.launch  yelldozer_test.launch
yellDozer/scripts/: IMU_pos_computer.py  imu_pos_computer.py  run_yellDozer.sh  uav_to_ros_converter.py
yellDozer/src/: tf_broadcaster_new.cpp
